# cloud-disk

./: .gitignore  README.md
backend/: CMakeLists.txt  uploadVM环境准备与执行计划.txt
backend/api_gateway/: CMakeLists.txt
backend/api_gateway/src/: main.cc
backend/common/: CMakeLists.txt
backend/common/include/: AlibabaOss.hpp  Hash.hpp  Logger.hpp  PreSql.hpp  RabbitMQ.hpp  SysUser.hpp
backend/common/src/: AlibabaOss.cc  Config.cc  Hash.cc  JWT.cc  Logger.cc  PreSql.cc  RabbitMQ.cc
backend/conf/: app.json  example_app.json
backend/file_services/: CMakeLists.txt
backend/file_services/include/: TlbFileController.hpp  TlbFileService.hpp
backend/file_services/src/: TlbFileController.cc  TlbFileDao.cc  TlbFileService.cc  main.cc
backend/idl/: CMakeLists.txt
backend/idl/include/: user.pb.h  user.srpc.h
backend/idl/proto/: user.proto
backend/idl/src/: UserClient.cc  UserServer.cc  user.pb.cc
backend/include/controller/: TlbFileController.hpp  UserController.hpp
backend/include/dao/: TlbFileDao.hpp  UserDao.hpp
backend/include/http_server/: Router.hpp
backend/include/models/: LogicalFile.hpp  PhysicalFile.hpp  SysUser.cc  SysUser.hpp  TlbFile.hpp
backend/include/services/: OssBackupWorker.hpp  TlbFileService.hpp  UserService.hpp
backend/include/utils/: AlibabaOss.hpp  Config.hpp  JWT.hpp  Logger.hpp  RabbitMQ.hpp
backend/oss_worker/: CMakeLists.txt
backend/oss_worker/src/: main.cc
backend/rabbitmq/: CMakeLists.txt  RabbitMQ.cc
backend/src/: CMakeLists.txt  main.cc
backend/src/controller/: CMakeLists.txt  TlbFileController.cc  UserController.cc
backend/src/dao/: CMakeLists.txt  TlbFileDao.cc  UserDao.cc
backend/src/services/: CMakeLists.txt  TlbFileService.cc  UserService.cc
backend/src/utils/: AlibabaOss.cc  CMakeLists.txt  Config.cc  Hash.cc  JWT.cc  Logger.cc  PreSql.cc  RabbitMQ.cc
backend/tests/: CMakeLists.txt  test_config.cc  test_hash.cc  test_insert.cc  test_jwt.cc  test_logger.cc  test_oss.cc  test_rabbitmq.cc  test_tlbfiledao.cc  test_tlbfileservice.cc  test_user.cc  test_userservice.cc
backend/user_services/: CMakeLists.txt
backend/user_services/include/: UserController.hpp  UserService.hpp
backend/user_services/src/: UserController.cc  UserDao.cc  UserService.cc  main.cc
